This file documents the revision history for Perl extension HTTP::Body.

0.6   2006-01-06 00:00:00
        - Fixed buffer bug in OctetStream, reported by Daisuke Murase <typester@cpan.org>.
        - Fixed YAML prereq, reported by Jess Robinson
        - Added tests, Ben Trott <ben@sixapart.com>.

0.5   2005-11-17 00:00:00
        - Updated for PAR compatibility

0.4   2005-11-09 01:00:00
        - Version bump to 0.4 so CPAN.pm installs the right version.

0.3  2005-10-27 20:00:00
        - removed use of List::Util first due to memory leakage.
          http://rt.cpan.org/NoAuth/Bug.html?id=13891

0.2   2005-10-07
        - fixed POD

0.1  2005-09-07
        - first release