@@ -1,14 +1,0 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
-name:         HTTP-Body
-version:      0.4
-version_from: lib/HTTP/Body.pm
-installdirs:  site
-requires:
-    Carp:                          0
-    File::Temp:                    0.14
-    IO::File:                      0
-    YAML:                          0
-
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
